<resources>
    <string name="app_name">SafeSpace</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="no_account">Do not have an account?</string>
    <string name="create_account">Create an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="has_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="livechat">Livechat</string>
    <string name="report">Report</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="sos">SOS</string>
    <string name="welcome">Welcome to SafeSpace</string>
    <string name="desc">Take control of your life, let us start today.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_image" />
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="logo" />
    <string name="new_image" />
    <string name="full_title">fullTitle</string>
    <string name="full_desc">fullDesc</string>

</resources>
